--- a/textgrowing_and_shrinking.html
+++ b/textgrowing_and_shrinking.html
@@ -32,7 +32,7 @@
  </script>
 </head>
 <body onload="start()"> <div class="header">
- <h2>Text Growing and Shrinking - 1CR18CS074</h2>
+ <h2>Text Growing and Shrinking </h2>
  </div>
 </body>
 <style>
