--- a/WebFuN.html
+++ b/WebFuN.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width='device-width', initial-scale=1.0">
-    <link rel="shortcut icon" href="https://play.google.com/store/apps/details?id=com.ai.game.en&hl=en_IN" type="x-icon">
+    <link rel="shortcut icon" href="https://www.pinclipart.com/picdir/middle/54-544315_fun-clipart-fun-game-games-fun-png-download.png" type="text/x-icon">
     <title>Web FuN</title>
 </head>
 <body>
