--- a/WebFuN.html
+++ b/WebFuN.html
@@ -88,6 +88,7 @@
         border: 2px;
         border-color: gray;
         color: gray;
+        border-collapse: collapse;
     }
     
 </style>
