--- a/WebFuN.html
+++ b/WebFuN.html
@@ -43,7 +43,7 @@
                 </tr>
                 <tr>
                     <td><a href="https://g.co/kgs/72qoEj"><img src="webpageimages/tictactoe.png" alt="tictactoe"></a></td>
-                    <td><a href="https://g.co/kgs/MLUkeX"><img src="webpageimages/minesweeper.png" alt="minesweeper" width="200" height="180"></a></td>
+                    <td><a href="https://g.co/kgs/zYy8MA"><img src="webpageimages/minesweeper.png" alt="minesweeper" width="200" height="180"></a></td>
                     <td><a href="https://g.co/kgs/NDuRz2"><img src="webpageimages/snake.png" alt="snake" width="200" height="180"></a></td>
                 </tr>
                 <tr>
